Thu Nov  3 16:38:44 1994  Theodore Y. Ts'o  (tytso@dcl)

	* encryption.h (krb5_keyblock): Added a field to hold an
		encryption type in the keyblock field --- so routines have
		a hint of which encryption type they should use.

	* error_def.h: Add support for the kv5m error table.  (For magic
		numbers.) 

Mon Oct 31 14:43:07 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Move WITH_CCOPTS and WITH_KRB5ROOT to the
		beginning of the file.  Otherwise the other tests won't
		get the CCOPTS flags correct while doing the feature
		tests. 

Tue Oct 25 23:54:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ext-proto.h (strdup): If the header files have strdup, don't try
		to redefine it.

Fri Oct 14 00:40:01 1994  Theodore Y. Ts'o  (tytso@dcl)

	* mit-des.h: Add declaration for krb5_des_md5_cst_entry.

	* mit-des.h: Change name of the des_crc cryptosystem from
		krb5_des_cst_entry to krb5_des_crc_cst_entry.

Tue Oct  4 14:51:32 1994  Theodore Y. Ts'o  (tytso@dcl)

	* encryption.h: Cast various potential shorts to ints.  This is
		not quite right either, but the whole encryption interface
		needs to be fixed.

	* keytab.h (krb5_kt_ops.resolv): Resolve's first argument is a const.

	* encryption.h: Add magic number to encryption structures.

Mon Oct  3 18:45:55 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb.h: Add magic number to _krb5_db_entry.  (This among other
	things will cause a backwards incompatible change to the database
	format.)  The previous magic number changes also force a database
	format change; we will eventually need to completely redo how we
	encode the database format, so that it isn't structure layout
	dependent!

	* Makefile.in: Fix install to obey ${DESTDIR}, copy conf.h and
		osconf.h from build tree.

	* Makefile.in: Fix "make install" to use $(srcdir) for header files.

Thu Sep 29 15:07:30 1994  Theodore Y. Ts'o  (tytso@dcl)

	* func_proto.h (krb5_realm_compare): Added prototype for functin
		donated by OpenVision.  (Compares two realms).
