@@ -33,8 +33,10 @@
         filling in the keyblock address in *keyblock
  */
 
-krb5_error_code mit_des_random_key (DECLARG(krb5_pointer, seed),
+krb5_error_code mit_des_random_key (DECLARG(const krb5_encrypt_block *, eblock),
+				    DECLARG(krb5_pointer, seed),
 				    DECLARG(krb5_keyblock **, keyblock))
+OLDDECLARG(const krb5_encrypt_block *, eblock)
 OLDDECLARG(krb5_pointer, seed)
 OLDDECLARG(krb5_keyblock **, keyblock)
 {
@@ -46,6 +48,8 @@ OLDDECLARG(krb5_keyblock **, keyblock)
 	krb5_xfree(randkey);
 	return ENOMEM;
     }
+    randkey->magic = KV5M_KEYBLOCK;
+    randkey->etype = eblock->crypto_entry->proto_enctype;
     randkey->length = sizeof(mit_des_cblock);
     randkey->keytype = KEYTYPE_DES;
     mit_des_new_random_key(randkey->contents, (mit_des_random_key_seed *) seed);
